--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "CHinSung"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an amazing person."
   location         : "Somewhere"
@@ -116,7 +116,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: mailto:your.name@email.com
+       url: chin_sung@naver.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
