--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "CHinSung's blog"
 title_separator          : "-"
-name                     : "Your Name"
+name                     : "CHinSung"
 description              : "An amazing website."
 url                      : "https://chinsun9.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
